--- a/DashBoard.html
+++ b/DashBoard.html
@@ -22,10 +22,10 @@
           </div>
           <!-- Menu -->
           <div class="hidden md:flex space-x-6">
-            <a href="jadwal.html" class="text-gray-300 hover:text-white flex items-center">
+            <a href="jadwal.php" class="text-gray-300 hover:text-white flex items-center">
               <img src="gambar/schedule.png" alt="Jadwal" class="h-5 w-5 mr-2" /> Jadwal Shift
             </a>
-            <a href="absen.html" class="text-gray-300 hover:text-white flex items-center">
+            <a href="absen.php" class="text-gray-300 hover:text-white flex items-center">
               <img src="gambar/absen,.png" alt="Absen" class="h-5 w-5 mr-2" /> Absen
             </a>
             <a href="Perizinan.html" class="text-gray-300 hover:text-white flex items-center">
