--- a/DashBoard.html
+++ b/DashBoard.html
@@ -44,7 +44,7 @@
               <img class="h-8 w-8 rounded-full" src="gambar/icons8-admin-settings-male.gif" alt="User profile" />
             </button>
             <div id="user-menu" class="hidden origin-top-right absolute right-0 mt-2 w-48 rounded-lg shadow-lg bg-white py-2">
-              <a href="menuprofile.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Profile Satpam</a>
+              <a href="menuprofile.php" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Profile Satpam</a>
               <a href="Setting.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Settings</a>
               <a href="from.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Sign Out</a>
             </div>
